--- a/BookManagement/packages.config
+++ b/BookManagement/packages.config
@@ -3,5 +3,18 @@
   <package id="angularjs" version="1.7.5" targetFramework="net45" />
   <package id="AngularJS.Core" version="1.7.5" targetFramework="net45" />
   <package id="AngularJS.Route" version="1.7.5" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net451" />
+  <package id="Ninject" version="3.3.4" targetFramework="net451" />
+  <package id="Ninject.Extensions.NamedScope" version="3.3.0" targetFramework="net451" />
+  <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net451" />
+  <package id="Ninject.Web.Common.OwinHost" version="3.3.1" targetFramework="net451" />
+  <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net451" />
+  <package id="Ninject.Web.WebApi.OwinHost" version="3.3.0" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
 </packages>
