- resolve package problem - api now working (api/books) - ready for integration

--- a/BookManagement/Web.config
+++ b/BookManagement/Web.config
@@ -35,11 +35,16 @@
       </rules>
     </rewrite>
     
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="SQLNCLI11.1;Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=DepartmentDb;Data Source=(LocalDB)\v11.0;Initial File Name=C:\Sources\Repositories\bookmanagement\BookManagement\App_Data\BookDb.mdf;" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
