--- a/BookManagement/Web.config
+++ b/BookManagement/Web.config
@@ -44,7 +44,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="SQLNCLI11.1;Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=DepartmentDb;Data Source=(LocalDB)\v11.0;Initial File Name=C:\Sources\Repositories\bookmanagement\BookManagement\App_Data\BookDb.mdf;" />
+        <parameter value="MSSQLLocalDB" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
